--- a/home/ss/.config/Code/User/settings.json
+++ b/home/ss/.config/Code/User/settings.json
@@ -1,8 +1,12 @@
 {
     "editor.minimap.enabled": false,
+    "explorer.confirmDelete": false,
+    "workbench.sideBar.location": "left",
+    "workbench.statusBar.visible": true,
     "workbench.tree.indent": 18,
     "workbench.editor.enablePreview": false,
-    "editor.fontSize": 10,
+    "editor.fontSize": 9,
+    "editor.tabSize": 4,
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
     "C_Cpp.updateChannel": "Insiders",
     "[xml]": {
@@ -10,5 +14,9 @@
     },
     "xmlTools.xmlFormatterImplementation": "classic",
     "editor.renderWhitespace": "all",
-    "editor.fontFamily": "'Roboto Mono for Powerline Regular', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'"
+    "editor.fontFamily": "'Roboto Mono for Powerline Regular', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "terminal.integrated.fontFamily": "'Roboto Mono for Powerline Regular', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "terminal.integrated.fontSize": 9,
+    "terminal.integrated.lineHeight":1,
+    "workbench.colorTheme": "Visual Studio Dark - C++"
 }
