--- a/home/ss/.config/Code/User/settings.json
+++ b/home/ss/.config/Code/User/settings.json
@@ -32,5 +32,10 @@
     "terminal.integrated.lineHeight": 1,
     "workbench.colorTheme": "Visual Studio Dark - C++",
     "clang-format.language.cpp.style": "Google",
-    "clang-format.fallbackStyle": "Google"
+    "clang-format.fallbackStyle": "Google",
+    "clang-format.language.typescript.fallbackStyle": "",
+    "clang-format.language.c.style": "Google",
+    "clang-format.language.c.fallbackStyle": "Google",
+    "clang-format.language.cpp.fallbackStyle": "Google",
+    "clang-format.style": "Google"
 }
