Change C++ editor default formatter

--- a/home/ss/.config/Code/User/settings.json
+++ b/home/ss/.config/Code/User/settings.json
@@ -40,6 +40,6 @@
     "clang-format.style": "Google",
     "clang-format.language.javascript.fallbackStyle": "",
     "[cpp]": {
-        "editor.defaultFormatter": "xaver.clang-format"
-    }
+        "editor.defaultFormatter": "ms-vscode.cpptools"
+    },
 }
