--- a/home/ss/.config/Code/User/settings.json
+++ b/home/ss/.config/Code/User/settings.json
@@ -40,4 +40,6 @@
     "[cpp]": {
         "editor.defaultFormatter": "xaver.clang-format"
     },
+    "clang-format.language.typescript.fallbackStyle": "",
+    "clang-format.fallbackStyle": "",
 }
