Create own clang-format format based on google

--- a/home/ss/.config/Code/User/settings.json
+++ b/home/ss/.config/Code/User/settings.json
@@ -31,9 +31,9 @@
     "terminal.integrated.fontSize": 9,
     "terminal.integrated.lineHeight": 1,
     "workbench.colorTheme": "Visual Studio Dark - C++",
-    "clang-format.language.cpp.style": "Google",
+    "clang-format.language.cpp.style": "file",
     "clang-format.language.cpp.fallbackStyle": "Google",
-    "clang-format.language.c.style": "Google",
+    "clang-format.language.c.style": "file",
     "clang-format.language.c.fallbackStyle": "Google",
     "clang-format.style": "",
     "clang-format.language.javascript.fallbackStyle": "",
