--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -6,5 +6,5 @@ Section "InputClass"
         MatchIsKeyboard "on"
         Option "XkbLayout" "pl,ru"
         Option "XkbModel" "pc105"
-        Option "XkbOptions" "grp:alt_shift_toggle,grp_led:scroll,terminate:ctrl_alt_bksp"
+        Option "XkbOptions" "grp:ctrl_shift_toggle,grp_led:scroll,terminate:ctrl_alt_bksp"
 EndSection
