--- a/home/ss/.config/ranger/rc.conf
+++ b/home/ss/.config/ranger/rc.conf
@@ -341,6 +341,7 @@ alias search     scout -rs
 alias search_inc scout -rts
 alias travel     scout -aefklst
 
+aliad cdd cd /home/sr/work_not/dotfiles
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
