set multipane mode in ranger

--- a/home/ss/.config/ranger/rc.conf
+++ b/home/ss/.config/ranger/rc.conf
@@ -341,7 +341,9 @@ alias search     scout -rs
 alias search_inc scout -rts
 alias travel     scout -aefklst
 
-aliad cdd cd /home/sr/work_not/dotfiles
+alias cds cd /home/sr/work/pibk/repo/sdip
+alias cdb cd /home/sr/work/pibk/repo/build-SDIP-Desktop_Qt_5_15_2_GCC_64bit-Debug
+
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
