--- a/home/ss/.config/starship.toml
+++ b/home/ss/.config/starship.toml
@@ -8,3 +8,6 @@ add_newline = false
 # Disable the package module, hiding it from the prompt completely
 #[package]
 #disabled = true
+
+[battery]
+disabled = true
